2006-06-08  Derek Price  <derek@ximbiot.com>

	* sanity.config.sh.in: Add DEFAULT_SIGN_TEMPLATE &
	DEFAULT_SIGN_TEXTMODE.
	* sanity.sh: Test verification of concatenated signatures.
	(openpgp-5): Skip when only first concatenated signature is reported.

	* sanity.sh: Look for the config file in more places and make it a
	fatal error if an explicitly specified file is not found.

	* server.c (requests): Add "Empty-conflicts" marker.
	* client.c (send_fileproc): Send contents of all files with conflicts
	unless the server can handle the conflict marker in the Entry.
	* sanity.sh (writeproxy, writeproxy-noredirect): Compensate for the new
	Empty-conflicts request.

	* sanity.sh (conflicts4): New tests.
	(Original patch from Mark D. Baushke <mdb@gnu.org>.)

2006-06-07  Derek Price  <derek@ximbiot.com>

	* sign.c: #include <limits.h> for ULONG_MAX.
	* client.c (strto_file_size): Clarify error messages.

2006-06-07  Mark D. Baushke  <mdb@gnu.org>

	* modules.c (my_module): Remove unused variable xvalue.
	[Fixes NetBSD coverity cid-705.]
	
2006-05-31  Mark D. Baushke  <mdb@gnu.org>

	* add.c (add): Fix memory leak.
	[Fixes NetBSD coverity cid-3751.]
	(add_directory): Fix memory leak.
	[Fixes NetBSD coverity cid-3640.]

	* checkin.c (Checkin): Avoid possible NULL dereference.
	[Fixes NetBSD coverity cid-2425.]

	* client.c (auth_server): Fix memory leak.
	[Fixes NetBSD coverity cid-3404.]

	* commit.c (remove_file): Fix memory leak.
	[Fixes NetBSD coverity cid-3752.]

	* rcs.c (RCS_checkin): Add assert (tip).
	[Fixes NetBSD coverity cid-2424.]

2006-05-26  Derek Price  <derek@ximbiot.com>

	* sanity.sh (rcs6): Wrap archive corruption in modify_repo for
	proxycheck.

2006-05-26  Mark D. Baushke  <mdb@gnu.org>

	* add.c (add): Do not leak memory.
	[Fixes NetBSD coverity cid-2199.]

	* edit.c (onoff_fileproc): Do not leak memory.
	[Fixes NetBSD coverity cid-2201.]

	* edit.c (onoff_filesdoneproc): Do not leak memory.
	[Fixes NetBSD coverity cid-2202.]
